@@ -11,7 +11,7 @@ void \fBuint32_pack_big\fP(char \fIs\fR[4],uint32 \fIu\fR);
 uint32 is a 32-bit unsigned integer type, normally either unsigned int
 or unsigned long.
 
-uint32_pack_big portably writes a uint16 \fIu\fR to \fIs\fR in
+uint32_pack_big portably writes a uint32 \fIu\fR to \fIs\fR in
 big-endian (i.e. network) byte order.
 
 .SH "SEE ALSO"
