@@ -1,0 +1,17 @@
+.TH uint64_unpack 3
+.SH NAME
+uint64_unpack \- read an unsigned little-endian 64-bit integer
+.SH SYNTAX
+.B #include <uint64.h>
+
+uint64 \fIu\fR;
+
+void \fBuint64_unpack\fP(const char \fIs\fR[4],uint64 *\fIu\fR);
+.SH DESCRIPTION
+uint64 is a 64-bit unsigned integer type.
+
+uint64_unpack portably reads a uint64 as stored on a little-endian
+architecture from \fIs\fR and writes it into \fIu\fR in the native byte order.
+
+.SH "SEE ALSO"
+uint64_pack(3), uint64_unpack_big(3)
